# web-announcement-feed-generator-python

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LAMBDA_FIX_DOCUMENTATION.md  LICENSE  README.md  README_ja.md  announcements.csv  data.csv  feed.atom  feed.xml  firebase_page.html  get_announcements.py  package-lock.json  package.json  prompt.md  pyproject.toml  requirements.txt  test_parser.py  test_results.json  tsconfig.json
src/: index.ts  main.py
src/scrapers/: __init__.py  base-scraper.ts  config.py  firebase-google-com-support-releases-scraper.ts  firebase_google_com.py  firebase_google_com_support_releases.py  generic.py  ja-monaca-io-headline-scraper.ts  ja_monaca_io.py  ja_monaca_io_headline.py  scraper-factory.ts
src/types/: index.ts
src/utils/: csv-generator.ts  feed-generator.ts  logger.ts
tests/: test_monaca_scraper.py
